--- a/Others/springboot-exposures.yaml
+++ b/Others/springboot-exposures.yaml
@@ -1,10 +1,17 @@
-id: springboot-actuators
+id: springboot-exposures
 
 info:
   name: Detect the exposure of Springboot Actuators
-  author: that_juan_ & dwisiswant0
+  author: h0tak88r
   severity: medium
-
+  description: Sensetive data disclosure via springboot 
+  tags: rce,exposures
+  reference:
+    - https://www.veracode.com/blog/research/exploiting-spring-boot-actuators
+    - https://github.com/mpgn/Spring-Boot-Actuator-Exploit
+    - https://hackerone.com/reports/1662474
+    - https://hackerone.com/reports/862589
+    - https://docs.spring.io/spring-boot/docs/current/actuator-api/htmlsingle/#caches
 requests:
   - method: GET
     path:
@@ -22,12 +29,10 @@ requests:
       - "{{BaseURL}}/actuator/exportRegisteredServices"
       - "{{BaseURL}}/actuator/features"
       - "{{BaseURL}}/actuator/flyway"
-      - "{{BaseURL}}/actuator/health"
       - "{{BaseURL}}/actuator/healthcheck"
       - "{{BaseURL}}/actuator/heapdump"
       - "{{BaseURL}}/actuator/httptrace"
       - "{{BaseURL}}/actuator/hystrix.stream"
-      - "{{BaseURL}}/actuator/info"
       - "{{BaseURL}}/actuator/integrationgraph"
       - "{{BaseURL}}/actuator/jolokia"
       - "{{BaseURL}}/actuator/liquibase"
@@ -58,10 +63,8 @@ requests:
       - "{{BaseURL}}/configprops"
       - "{{BaseURL}}/dump"
       - "{{BaseURL}}/env"
-      - "{{BaseURL}}/health"
       - "{{BaseURL}}/heapdump"
       - "{{BaseURL}}/hystrix.stream"
-      - "{{BaseURL}}/info"
       - "{{BaseURL}}/jolokia"
       - "{{BaseURL}}/jolokia/list"
       - "{{BaseURL}}:8090/jolokia"
@@ -72,12 +75,24 @@ requests:
       - "{{BaseURL}}/metrics"
       - "{{BaseURL}}/threaddump"
       - "{{BaseURL}}/trace"
+      - "{{BaseURL}}/health"
+      - "{{BaseURL}}/actuator/autoconfig"
+      - "{{BaseURL}}/caches"
+      - "{{BaseURL}}/conditions"
+      - "{{BaseURL}}/features"
+      - "{{BaseURL}}/flyway"
+      - "{{BaseURL}}/gateway/routes"
+      - "{{BaseURL}}/actuator/gateway/routes"
+      - "{{BaseURL}}/actuator/health"
+      - "{{BaseURL}}/httptrace"
+      - "{{BaseURL}}/info"
+      - "{{BaseURL}}/actuator/info"
+      - "{{BaseURL}}/logfile"
     matchers-condition: and
     matchers:
       - type: word
         part: body
         words:
-          - "method"
           - "spring"
           - "TYPE"
           - "system"
@@ -87,6 +102,52 @@ requests:
           - "JMXConfigurator"
           - "JMImplementation"
           - "EnvironmentManager"
+          - '"type"'
+          - '"beans"'
+          - '"dependencies"'
+          - '"scope"'
+          - '"positiveMatches":{'
+          - '"unconditionalClasses":['
+          - "org.springframework.boot.actuate"
+          - "beans"
+          - "contexts"
+          - "threadName"
+          - "threadId"
+          - "waitedTime"
+          - "lockName"
+          - "stackTrace"
+          - "methodName"
+          - '"enabled":['
+          - '"disabled":['
+          - "flywayBeans"
+          - "predicate"
+          - "route_id"
+          - '"traces"'
+          - '"timestamp"'
+          - '"principal"'
+          - '"session"'
+          - '"build"'
+          - '"artifact"'
+          - '"config":{'
+          - '"agentId":"'
+          - 'springframework.web.HttpRequestMethodNotSupportedException'
+          - 'INFO'
+          - '"loggers"'
+          - '"levels"'
+          - "mappings"
+          - "method"
+          - "produces"
+          - "mem"
+          - "mem.free"
+          - "processors"
+          - "instance.uptime"
+          - "systemload.average"
+          - "nonheap.init"
+          - "heap.committed"
+          - '"timestamp"'
+          - '"info"'
+          - '"path"'
+          - '"threads":'
         condition: or
       - type: status
         status:
@@ -96,6 +157,7 @@ requests:
           - "X-Application-Context"
           - "application/json"
           - "application/vnd.spring-boot.actuator.v2+json"
+          - "application/vnd.spring-boot.actuator.v1+json"
           - "hprof"
         condition: or
         part: header
