--- a/Others/wp-config.php-disclosure.yaml
+++ b/Others/wp-config.php-disclosure.yaml
@@ -1,7 +1,7 @@
 id: wp-config-disclosure-fuzzing
 info:
   name: WordPress Config Disclosure Fuzzing Template
-  author: your-name
+  author: h0tak88r
   severity: high
   description: Fuzzes for wp-config.PHP and wp-config.php.
 http:
