update syntax-error templates

--- a/Others/apache-nifi-unauth.yaml
+++ b/Others/apache-nifi-unauth.yaml
@@ -3,7 +3,7 @@ id: Apache Nifi-Unauthenticated
 info:
   name: Apache Nifi-Unauthenticated
   author: notnotnotveg
-  severity: informative
+  severity: low
 
 requests:
   - method: GET
