--- a/Others/adiscon-loganalyzer.yaml
+++ b/Others/adiscon-loganalyzer.yaml
@@ -1,8 +1,8 @@
-id: adiscon-loganalyzer
+id: adiscon-log-analyzer
 
 info:
   name: Adiscon LogAnalyzer - Information Disclosure
-  author: geeknik
+  author: h0tak88r
   severity: high
   description: Adiscon LogAnalyzer was discovered. Adiscon LogAnalyzer is a web interface to syslog and other network event data. It provides easy browsing and analysis of real-time network events and reporting services.
   classification:
@@ -37,5 +37,3 @@ requests:
         part: header
         words:
           - 'text/html'
-
-# Enhanced by mp on 2022/03/20
