--- a/Others/apache-druid-detect.yaml
+++ b/Others/apache-druid-detect.yaml
@@ -2,8 +2,8 @@ id: apache-druid-detect
 
 info:
   name: Apache Druid Detection
-  author: notnotnotveg
-  severity: informative
+  author: h0tak88r
+  severity: info
 
 requests:
   - method: GET
