--- a/Others/nscript-web-studios-xss.yaml
+++ b/Others/nscript-web-studios-xss.yaml
@@ -1,8 +1,8 @@
-id: Nscript XSS
+id: nscript-xss
 
 info:
   name: Nscript web studios XSS vulnerability
-  author: pikpikcu 
+  author: h0tak88r 
   severity: medium
   #Category: webapps
   #Google Dork: "Powered by : Nscript web studios"
