--- a/Others/werkzeug-debug.yaml
+++ b/Others/werkzeug-debug.yaml
@@ -1,9 +1,9 @@
-id: werkzeug-debug
+id: werkzeug-console
 
 info:
-  name: werkzeug-debug
-  author: notnotnotveg
-  severity: informative
+  name: werkzeug-console
+  author: h0tak88r
+  severity: info
 
 requests:
   - method: GET
